release: prepare Manifold v0.2.0
